--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,7 +16,12 @@
     <tbody>
       <% @products.each do |product| %>
         <tr class="<%= cycle('list_line_odd', 'list_line_even') %>" >
-          <td class="image"><%= image_tag(product.image_url, class: 'list_image') %></td>
+          <td class="image">
+            <% if product.image_url.present? %>
+              <%= image_tag(product.image_url, class: 'list_image')%>
+            <% end %>
+          </td>
+
           <td><h3><%= product.title %></h3> <br> <%= truncate(strip_tags(product.description), length: 100) %></td>
           <td>R$ <%= product.price %></td>
           <td>
