--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Depot</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title><%= @page_title || 'Depot' %></title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
 
 
-  <body>
-    <main class="<%= controller.controller_name %>"
-      <%= yield %>
-    </main>
+<body>
+  <header class='main'>
+    <%= image_tag 'Logo.png', alt: 'umanni depot' %>
+    <h1> <%= @page_title %>
+    </header>
+    <section class='content'>
+      <nav class="side_nav">
+        <ul>
+          <li>Home</li>
+          <li>Home</li>
+          <li>Home</li>
+        </ul>
+      </nav>
+
+
+      <main class="<%= controller.controller_name %>"
+        <%= yield %>
+      </main>
+    </section>
   </body>
-</html>
+  </html>
