--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,9 @@ header.main {
     float: right;
     color: #FFF;
     padding-right: 30px;
+    padding-top: 5px;
     text-transform: uppercase;
+    font-weight: lighter;
   }
 }
 
@@ -68,10 +70,11 @@ header.main {
 
       li{
         margin: 0;
-        padding: 0;
+        font-size: large;
+        padding: 10px 0;
 
         a{
-          color: #bfb;
+          color: inherit;
           text-decoration: none;
 
         }
@@ -79,12 +82,12 @@ header.main {
           background: none;
           color: white;
         }
-
       }
-
     }
-
-
   }
 
+  main{
+    margin: auto;
+    width: 100%;
+  }
 }
