--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,10 @@
     <section class='content'>
       <nav class="side_nav">
         <ul>
-          <li>Home</li>
-          <li>Home</li>
-          <li>Home</li>
+          <li><a href="/">Home</a></li>
+          <li><%= link_to 'Catalog', catalog_url %></li>
+          <li>Search</li>
+          <li>Exit</li>
         </ul>
       </nav>
 
