--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,18 +1,16 @@
 <h1>Store#index</h1>
-<p>Find me in app/views/store/index.html.erb</p>
-<br>
 
 <ul class="catalog">
-  <% @all_products. each do |product| %>
-  <li>
-    <%= image_tag(product.image_url) %>
-    <h3> <%= link_to product.title, product  %> </h3>
-    <p> <%= product.description %> </p>
-    <div class="price">
-    <%= number_to_currency(product.price) %>
-  </div>
-  <!-- <span class="price" style="float: right"><%= product.price %></span> -->
-</li>
-<% end %>
-
+  <% cache @all_products do %>
+    <% @all_products. each do |product| %>
+      <% cache product %>
+        <li>
+          <%= image_tag(product.image_url) %>
+          <h3><%= link_to product.title, product %></h3>
+          <p><%= product.description %></p>
+          <div class="price"><%= number_to_currency(product.price) %></div>
+        </li>=
+      <% end %>
+    <% end %>
+  <% end %>
 </ul>
