--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,14 +2,14 @@
 
 <ul class="catalog">
   <% cache @all_products do %>
-    <% @all_products. each do |product| %>
-      <% cache product %>
+    <% @all_products.each do |product| %>
+      <% cache product do %>
         <li>
           <%= image_tag(product.image_url) %>
-          <h3><%= link_to product.title, product %></h3>
+          <h3><%= link_to(product.title, product) %></h3>
           <p><%= product.description %></p>
           <div class="price"><%= number_to_currency(product.price) %></div>
-        </li>=
+        </li>
       <% end %>
     <% end %>
   <% end %>
