--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -41,8 +41,28 @@
       margin-right: 15px;
      }
   }
+
   .price{
     float: right;
+    padding-top: 20px;
+  }
+
+  form{
+    // display: inline;
+    float: right;
+    width: 100%
+  }
+
+  input[type='submit']{
+    background-color: #282;
+    border-radius: 10px;
+    color: white;
+    padding: 10px;
+    width: 100%
+  }
+
+  input[type='submit']:hover{
+    background-color: #141;
   }
 
 }
