--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<ul>
+  <% @cart.itens_group.each do |item| %>
+    <li><%= item.product.title %></li>
+  <% end %>
+</ul>
+
 <%= link_to 'Edit', edit_cart_path(@cart) %> |
 <%= link_to 'Back', carts_path %>
