E3 Finishing the Cart

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><%= link_to 'Catalog', catalog_path %></li>
+          <li><%= link_to 'Carts', carts_path %></li>
           <li>Search</li>
           <li>Exit</li>
         </ul>
