--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,10 +1,24 @@
-<p id="notice"><%= notice %></p>
-
-<ul>
-  <% @cart.itens_group.each do |item| %>
-    <li><%= item.quantity %>&times; <%= item.product.title %></li>
-  <% end %>
-</ul>
-
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<article>
+  <% if notice %>
+    <aside id="notice"><%= notice %></aside>
+<% end %>
+  <h2>Your Cart</h2>
+  <table>
+    <% @cart.itens_group.each do |item| %>
+      <tr>
+        <td class="quantity"><%= item.quantity %></td>
+        <td><%= item.product.title %></td>
+        <td class="price"><%= number_to_currency(item.total_price) %></td>
+      </tr>
+    <% end %>
+    <tfoot>
+      <tr>
+        <th colspan="2">Total:</td>
+        <td class="price"><%= number_to_currency(@cart.total_price) %></td>
+      </tr>
+    </tfoot>
+  </table>
+  <%= button_to 'Empty cart', @cart,
+          method: :delete,
+          data: { confirm: 'Are you sure?' } %>
+</article>
