--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,82 +1,56 @@
 /*
-* This is a manifest file that'll be compiled into application.css, which will include all the files
-* listed below.
-*
-* Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
-* vendor/assets/stylesheets directory can be referenced here using a relative path.
-*
-* You're free to add application-wide styles to this file and they'll appear at the bottom of the
-* compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
-* files in this directory. Styles in this file should be added after the last require_* statement.
-* It is generally better to create a new file per style scope.
-*
 *= require_tree .
 *= require_self
 */
+$font-size: large;
 
 body {
   margin: 0;
   padding: 0;
-
+  height: 100vh;
 }
+
 header.main {
   background: #1B88BD;
   margin: 0;
-
-  text-align: center; // Mobile
-  @media (min-width: 30em){
-    text-align: left; // Default
-  }
-
+  padding: 1%;
   h1{
     float: right;
     color: #FFF;
-    padding-right: 30px;
-    padding-top: 5px;
-    text-transform: uppercase;
-    font-weight: lighter;
+    margin: 0;
+    font-weight: bold;
   }
 }
 
 .content{
   margin: 0;
   padding: 0;
+  height: 100vh;
   display: flex;
-  display: -webkit-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
 
   flex-direction: column; // Mobile
   @media (min-width: 30em){
     flex-direction: row; // Default
-    -webkit-box-orient: horizontal;
   }
 
-  nav{
+  nav.side-nav{
     background: #1B88BD;
     color: #FFF;
-    font-size: 600;
-    padding: 5px;
-    padding-right: 20px;
+    padding: 0 1%;
 
-    text-align: center;
-    @media (min-width: 30em){
-      text-align: left;
-    }
     ul{
       list-style: none;
       margin: 0;
       padding: 0;
 
       li{
-        margin: 0;
         font-size: large;
-        padding: 10px 0;
+        padding: 20% 0;
+        text-align: center;
 
         a{
           color: inherit;
           text-decoration: none;
-
         }
         a:hover {
           background: none;
@@ -98,7 +72,7 @@ header.main {
   }
 
   main{
-    margin: auto;
     width: 100%;
+    padding: 1%;
   }
 }
