--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -1,3 +1,19 @@
-// Place all the styles related to the Carts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import 'application';
+.carts{
+  ul{
+    list-style: none;
+    padding-left: 0;
+    ul{
+      padding-left: 3%;
+    }
+  }
+  li{
+    font-size: $font-size;
+    padding: 1% 0;
+  }
+  a, a:visited, a:hover{
+    color: #000;
+    background-color: transparent;
+  }
+  font-size: $font-size;
+}
