--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -3,55 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .store{
-  ul.catalog{
-    border-top: solid 2px;
-    padding-left: 15px;
-    list-style: none;
-
-    li {
-      border-bottom: solid thin #ddd;
-      font-size: 15px;
-      padding: 8px;
-
-      &::after {
-        clear: both;
-        content: " ";
-        display: block;
-      }
-
-      h3{
-        margin-top: 0;
-      }
-
-      a{
-        text-decoration: none;
-
-      }
-      a:hover{
-        color: #666;
-        background-color: transparent;
-      }
-
-    }
-
-    img {
-      width: 100px;
-      float: left;
-      padding: 3px;
-      margin-right: 15px;
-     }
-  }
-
-  .price{
-    float: right;
-    padding-top: 20px;
-  }
-
-  form{
-    // display: inline;
-    float: right;
-    width: 100%
-  }
+  img.product {
+    width: 200px;
+   }
 
   input[type='submit']{
     background-color: #282;
@@ -60,9 +14,25 @@
     padding: 10px;
     width: 100%
   }
-
   input[type='submit']:hover{
     background-color: #141;
   }
 
+  table.catalog{
+    width: 100%;
+    a{
+      text-decoration: none;
+    }
+    a:hover{
+      color: #666;
+      background-color: transparent;
+    }
+    thead{
+      font-size: x-large;
+    }
+
+    th{
+      padding-bottom: 2%;
+    }
+  }
 }
