--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <h1> <%= @page_title %> </h1>
     </header>
     <section class='content'>
-      <nav class="side_nav">
+      <nav class="side-nav">
         <ul>
           <li><a href="/">Home</a></li>
           <li><%= link_to 'Catalog', catalog_path %></li>
