--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,26 @@
 
   <body>
     <header class='main'>
-      <%= image_tag 'logo.png' %>
+      <%= link_to image_tag('logo.png'), root_path %>
       <h1> <%= @page_title %> </h1>
     </header>
     <section class='content'>
       <nav class="side-nav">
         <ul>
-          <li><a href="/">Home</a></li>
           <li><%= link_to 'Catalog', catalog_path %></li>
           <li><%= link_to 'Carts', carts_path %></li>
           <li>Search</li>
           <li>Exit</li>
         </ul>
+
+        <article id="cart">
+          <header> Cart </header>
+          <% if @cart %>
+            <%= render @cart %>
+          <% else %>
+            Empty
+          <% end %>
+        </div>
       </nav>
 
       <main class="<%= controller.controller_name %>">
