F2 Creating an Ajax-Based Cart

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,7 +59,7 @@ header.main {
         }
       }
     }
-    #cart {
+    article {
       header {
         text-align: center;
         width: 100%;
