--- a/app/views/itens_groups/_itens_group.html.erb
+++ b/app/views/itens_groups/_itens_group.html.erb
@@ -1,4 +1,4 @@
-<tr>
+<tr id="itens_group__<%= itens_group.id %>">
   <td class="quantity"><%= itens_group.quantity %></td>
   <td><%= itens_group.product.title %></td>
   <td class="price"><%= number_to_currency(itens_group.total_price) %></td>
