--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -11,9 +11,6 @@
     font-size: $font-size;
     padding: 1% 0;
   }
-  a, a:visited, a:hover{
-    color: #000;
-    background-color: transparent;
-  }
+  width: 100%;
   font-size: $font-size;
 }
