--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -25,7 +25,7 @@
             <div class="price"><%= number_to_currency(product.price, unit:'R$') %></div>
           </th>
           <th>
-            <%= button_to 'Add to Cart', itens_groups_path(product_id: product) %>
+            <%= button_to 'Add to Cart', itens_groups_path(product_id: product), remote: true %>
           </th>
         </tr>
 
